--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,12 @@ services:
       - ./docker-data/assets:/var/www/html/assets
 
   ##### versão sem ssl
-      - ./docker/production/nginx.conf:/etc/nginx/conf.d/default.conf
+    #  - ./docker/production/nginx.conf:/etc/nginx/conf.d/default.conf
 
   ##### versão com ssl
-    #  - ./docker/production/nginx-ssl.conf:/etc/nginx/conf.d/default.conf
-    #  - ./docker-data/certs/conf:/etc/letsencrypt
-    #  - ./docker-data/certs/www:/var/www/certbot
+      - ./docker/production/nginx-ssl.conf:/etc/nginx/conf.d/default.conf
+      - ./docker-data/certs/conf:/etc/letsencrypt
+      - ./docker-data/certs/www:/var/www/certbot
     ports:
      - "80:80"
      - "443:443"
