--- a/.env_sample
+++ b/.env_sample
@@ -1,5 +1,4 @@
-BASE_URL=http://54.232.103.102/
-
+BASE_URL=https://mapa.arteeculturataubate.com.br
 APP_MODE=production
 LOG_LEVEL=DEBUG
 LOG_ENABLED=true
