--- a/.env_sample
+++ b/.env_sample
@@ -1,4 +1,4 @@
-BASE_URL=https://mapa.arteeculturataubate.com.br
+BASE_URL=http://mapa.arteeculturataubate.com.br
 APP_MODE=production
 LOG_LEVEL=DEBUG
 LOG_ENABLED=true
